@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-27T00:58:45Z",
+  "timestamp" : "2022-05-27T08:15:41Z",
   "count_outdated" : 298,
   "uniques_outdated" : 154,
-  "count" : 328,
+  "count" : 327,
   "uniques" : 175,
   "clones" : [
     {
       "timestamp": "2022-05-13T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
